# safe_cpp

./: CMakeLists.txt
safe_cpp/: CMakeLists.txt  bool.cpp  bool.hpp  core.hpp  object.cpp  object.hpp  safe_cpp.cpp  safe_cpp.hpp
sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.hpp
